objects/Veda_Fraud_Address_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Address_Indicator_Match__c</fullName>
        <label>Address Indicator Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Result</label>
        <referenceTo>Veda_Fraud_Bureau_Result__c</referenceTo>
        <relationshipName>Address_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electoral_Roll_Result_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electoral Roll Result List</label>
        <referenceTo>Veda_Electoral_Roll_Result_List__c</referenceTo>
        <relationshipName>Address_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Listing_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phone Listing Result</label>
        <referenceTo>Veda_Fraud_Phone_Listing_Result__c</referenceTo>
        <relationshipName>Address_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_code_Indicator__c</fullName>
        <label>Post code Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Indicator__c</fullName>
        <label>Property Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Indicator__c</fullName>
        <label>State Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name_Indicator__c</fullName>
        <label>Street Name Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Indicator__c</fullName>
        <label>Street Number Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type_Indicator__c</fullName>
        <label>Street Type Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number_Indicator__c</fullName>
        <label>Unit Number Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suburb_Indicator__c</fullName>
        <label>suburb Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Fraud Address Indicator</label>
    <nameField>
        <label>Address Indicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Address Indicator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>